deleted subject_list and engagement from the main, now only in the folder data_engagement

--- a/angagement_analysis.ipynb
+++ b/angagement_analysis.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "511eb6fe",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 12,
    "id": "c1b7fd67",
    "metadata": {},
    "outputs": [],
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 13,
    "id": "80df2525",
    "metadata": {},
    "outputs": [],
@@ -144,12 +144,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 15,
    "id": "e84d8594",
    "metadata": {},
    "outputs": [],
    "source": [
-    "enggg=sv.loading('engagement')"
+    "enggg=sv.loading('data_engagement/engagement')"
    ]
   },
   {
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "id": "88990f49",
    "metadata": {},
    "outputs": [],
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "7a15ad12",
    "metadata": {},
    "outputs": [],
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "37d6dd71",
    "metadata": {},
    "outputs": [
@@ -284,62 +284,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<KeysViewHDF5 ['atlasses', 'chlocs', 'chnames', 'dismissed', 'mayavi', 'original']>\n",
-      "chnames (184,)\n",
-      "<KeysViewHDF5 ['dominance', 'implantation', 'nr', 'orde', 'outlier_chans', 'outlier_epochs', 'url']>\n",
-      "outlier_chans <HDF5 dataset \"strict_bads_names\": shape (27,), type \"|S11\">\n",
-      "<KeysViewHDF5 ['atlasses', 'chlocs', 'chnames', 'dismissed', 'mayavi', 'original']>\n",
-      "chnames (150,)\n",
-      "<KeysViewHDF5 ['dominance', 'implantation', 'nr', 'orde', 'outlier_chans', 'outlier_epochs', 't-elec', 'url']>\n",
-      "outlier_chans <HDF5 dataset \"strict_bads_names\": shape (33,), type \"|S13\">\n",
-      "<KeysViewHDF5 ['atlasses', 'chlocs', 'chnames', 'correction', 'dismissed', 'mayavi', 'original']>\n",
-      "chnames (125,)\n",
-      "<KeysViewHDF5 ['dominance', 'implantation', 'nr', 'orde', 'outlier_chans', 'outlier_epochs', 't-elec', 'url']>\n",
-      "outlier_chans <HDF5 dataset \"strict_bads_names\": shape (17,), type \"|S11\">\n",
-      "<KeysViewHDF5 ['atlasses', 'chlocs', 'chnames', 'correction', 'dismissed', 'mayavi', 'original']>\n",
-      "chnames (139,)\n",
-      "<KeysViewHDF5 ['dominance', 'implantation', 'nr', 'orde', 'other', 'outlier_chans', 'outlier_epochs', 'url']>\n",
-      "outlier_chans <HDF5 dataset \"strict_bads_names\": shape (24,), type \"|S13\">\n",
-      "<KeysViewHDF5 ['atlasses', 'chlocs', 'chnames', 'correction', 'dismissed', 'mayavi', 'original']>\n",
-      "chnames (192,)\n",
-      "<KeysViewHDF5 ['dominance', 'implantation', 'nr', 'orde', 'outlier_chans', 'outlier_epochs', 't-elec', 'url']>\n",
-      "outlier_chans <HDF5 dataset \"strict_bads_names\": shape (42,), type \"|S11\">\n",
-      "<KeysViewHDF5 ['atlasses', 'chlocs', 'chnames', 'correction', 'dismissed', 'mayavi', 'original']>\n",
-      "chnames (127,)\n",
-      "<KeysViewHDF5 ['dominance', 'implantation', 'nr', 'orde', 'outlier_chans', 'outlier_epochs', 't-elec', 'url']>\n",
-      "outlier_chans <HDF5 dataset \"strict_bads_names\": shape (17,), type \"|S13\">\n",
-      "<KeysViewHDF5 ['atlasses', 'chlocs', 'chnames', 'dismissed', 'mayavi', 'original']>\n",
-      "chnames (154,)\n",
-      "<KeysViewHDF5 ['dominance', 'implantation', 'nr', 'orde', 'other', 'outlier_chans', 'outlier_epochs', 't-elec', 'url']>\n",
-      "outlier_chans <HDF5 dataset \"strict_bads_names\": shape (16,), type \"|S11\">\n",
-      "<KeysViewHDF5 ['atlasses', 'chlocs', 'chnames', 'dismissed', 'mayavi', 'original']>\n",
-      "chnames (187,)\n",
-      "<KeysViewHDF5 ['dominance', 'implantation', 'nr', 'orde', 'outlier_chans', 'outlier_epochs', 't-elec', 'url']>\n",
-      "outlier_chans <HDF5 dataset \"strict_bads_names\": shape (41,), type \"|S13\">\n",
-      "<KeysViewHDF5 ['atlasses', 'chlocs', 'chnames', 'correction', 'dismissed', 'mayavi', 'original']>\n",
-      "chnames (148,)\n",
-      "<KeysViewHDF5 ['dominance', 'implantation', 'nr', 'orde', 'other', 'outlier_chans', 'outlier_epochs', 't-elec', 'url']>\n",
-      "outlier_chans <HDF5 dataset \"strict_bads_names\": shape (39,), type \"|S13\">\n",
-      "<KeysViewHDF5 ['atlasses', 'chlocs', 'chnames', 'correction', 'dismissed', 'mayavi', 'original']>\n",
-      "chnames (222,)\n",
-      "<KeysViewHDF5 ['implantation', 'nr', 'orde', 'other', 'outlier_chans', 'outlier_epochs', 't-elec', 'url']>\n",
-      "outlier_chans <HDF5 dataset \"strict_bads_names\": shape (55,), type \"|S11\">\n",
-      "<KeysViewHDF5 ['atlasses', 'chlocs', 'chnames', 'correction', 'dismissed', 'mayavi', 'original']>\n",
-      "chnames (186,)\n",
-      "<KeysViewHDF5 ['dominance', 'implantation', 'nr', 'orde', 'outlier_chans', 'outlier_epochs', 't-elec', 'url']>\n",
-      "outlier_chans <HDF5 dataset \"strict_bads_names\": shape (18,), type \"|S13\">\n",
-      "<KeysViewHDF5 ['atlasses', 'chlocs', 'chnames', 'correction', 'dismissed', 'mayavi', 'original']>\n",
-      "chnames (166,)\n",
-      "<KeysViewHDF5 ['dominance', 'implantation', 'nr', 'orde', 'other', 'outlier_chans', 'outlier_epochs', 't-elec', 'url']>\n",
-      "outlier_chans <HDF5 dataset \"strict_bads_names\": shape (19,), type \"|S11\">\n",
-      "<KeysViewHDF5 ['atlasses', 'chlocs', 'chnames', 'dismissed', 'mayavi', 'original']>\n",
-      "chnames (170,)\n",
-      "<KeysViewHDF5 ['dominance', 'implantation', 'nr', 'orde', 'outlier_chans', 'outlier_epochs', 'url']>\n",
-      "outlier_chans <HDF5 dataset \"strict_bads_names\": shape (47,), type \"|S10\">\n",
-      "<KeysViewHDF5 ['atlasses', 'chlocs', 'chnames', 'correction', 'dismissed', 'mayavi', 'original']>\n",
-      "chnames (128,)\n",
-      "<KeysViewHDF5 ['dominance', 'implantation', 'nr', 'orde', 'outlier_chans', 'outlier_epochs', 'url']>\n",
-      "outlier_chans <HDF5 dataset \"strict_bads_names\": shape (21,), type \"|S13\">\n",
       "<KeysViewHDF5 ['atlasses', 'chlocs', 'chnames', 'dismissed', 'mayavi', 'original']>\n",
       "chnames (107,)\n",
       "<KeysViewHDF5 ['dominance', 'implantation', 'nr', 'orde', 'outlier_chans', 'outlier_epochs', 't-elec', 'url']>\n",
@@ -349,17 +293,73 @@
       "<KeysViewHDF5 ['dominance', 'implantation', 'nr', 'orde', 'other', 'outlier_chans', 'outlier_epochs', 'url']>\n",
       "outlier_chans <HDF5 dataset \"strict_bads_names\": shape (29,), type \"|S11\">\n",
       "<KeysViewHDF5 ['atlasses', 'chlocs', 'chnames', 'dismissed', 'mayavi', 'original']>\n",
+      "chnames (170,)\n",
+      "<KeysViewHDF5 ['dominance', 'implantation', 'nr', 'orde', 'outlier_chans', 'outlier_epochs', 'url']>\n",
+      "outlier_chans <HDF5 dataset \"strict_bads_names\": shape (47,), type \"|S10\">\n",
+      "<KeysViewHDF5 ['atlasses', 'chlocs', 'chnames', 'dismissed', 'mayavi', 'original']>\n",
+      "chnames (150,)\n",
+      "<KeysViewHDF5 ['dominance', 'implantation', 'nr', 'orde', 'outlier_chans', 'outlier_epochs', 't-elec', 'url']>\n",
+      "outlier_chans <HDF5 dataset \"strict_bads_names\": shape (33,), type \"|S13\">\n",
+      "<KeysViewHDF5 ['atlasses', 'chlocs', 'chnames', 'dismissed', 'mayavi', 'original']>\n",
+      "chnames (184,)\n",
+      "<KeysViewHDF5 ['dominance', 'implantation', 'nr', 'orde', 'outlier_chans', 'outlier_epochs', 'url']>\n",
+      "outlier_chans <HDF5 dataset \"strict_bads_names\": shape (27,), type \"|S11\">\n",
+      "<KeysViewHDF5 ['atlasses', 'chlocs', 'chnames', 'dismissed', 'mayavi', 'original']>\n",
       "chnames (169,)\n",
       "<KeysViewHDF5 ['dominance', 'implantation', 'nr', 'orde', 'outlier_chans', 'outlier_epochs', 'url']>\n",
       "outlier_chans <HDF5 dataset \"strict_bads_names\": shape (18,), type \"|S11\">\n",
+      "<KeysViewHDF5 ['atlasses', 'chlocs', 'chnames', 'correction', 'dismissed', 'mayavi', 'original']>\n",
+      "chnames (166,)\n",
+      "<KeysViewHDF5 ['dominance', 'implantation', 'nr', 'orde', 'other', 'outlier_chans', 'outlier_epochs', 't-elec', 'url']>\n",
+      "outlier_chans <HDF5 dataset \"strict_bads_names\": shape (19,), type \"|S11\">\n",
+      "<KeysViewHDF5 ['atlasses', 'chlocs', 'chnames', 'correction', 'dismissed', 'mayavi', 'original']>\n",
+      "chnames (125,)\n",
+      "<KeysViewHDF5 ['dominance', 'implantation', 'nr', 'orde', 'outlier_chans', 'outlier_epochs', 't-elec', 'url']>\n",
+      "outlier_chans <HDF5 dataset \"strict_bads_names\": shape (17,), type \"|S11\">\n",
+      "<KeysViewHDF5 ['atlasses', 'chlocs', 'chnames', 'correction', 'dismissed', 'mayavi', 'original']>\n",
+      "chnames (186,)\n",
+      "<KeysViewHDF5 ['dominance', 'implantation', 'nr', 'orde', 'outlier_chans', 'outlier_epochs', 't-elec', 'url']>\n",
+      "outlier_chans <HDF5 dataset \"strict_bads_names\": shape (18,), type \"|S13\">\n",
+      "<KeysViewHDF5 ['atlasses', 'chlocs', 'chnames', 'correction', 'dismissed', 'mayavi', 'original']>\n",
+      "chnames (148,)\n",
+      "<KeysViewHDF5 ['dominance', 'implantation', 'nr', 'orde', 'other', 'outlier_chans', 'outlier_epochs', 't-elec', 'url']>\n",
+      "outlier_chans <HDF5 dataset \"strict_bads_names\": shape (39,), type \"|S13\">\n",
       "<KeysViewHDF5 ['atlasses', 'chlocs', 'chnames', 'dismissed', 'mayavi', 'original']>\n",
       "chnames (168,)\n",
       "<KeysViewHDF5 ['dominance', 'implantation', 'nr', 'orde', 'outlier_chans', 'outlier_epochs', 'url']>\n",
       "outlier_chans <HDF5 dataset \"strict_bads_names\": shape (33,), type \"|S11\">\n",
+      "<KeysViewHDF5 ['atlasses', 'chlocs', 'chnames', 'correction', 'dismissed', 'mayavi', 'original']>\n",
+      "chnames (192,)\n",
+      "<KeysViewHDF5 ['dominance', 'implantation', 'nr', 'orde', 'outlier_chans', 'outlier_epochs', 't-elec', 'url']>\n",
+      "outlier_chans <HDF5 dataset \"strict_bads_names\": shape (42,), type \"|S11\">\n",
+      "<KeysViewHDF5 ['atlasses', 'chlocs', 'chnames', 'correction', 'dismissed', 'mayavi', 'original']>\n",
+      "chnames (128,)\n",
+      "<KeysViewHDF5 ['dominance', 'implantation', 'nr', 'orde', 'outlier_chans', 'outlier_epochs', 'url']>\n",
+      "outlier_chans <HDF5 dataset \"strict_bads_names\": shape (21,), type \"|S13\">\n",
+      "<KeysViewHDF5 ['atlasses', 'chlocs', 'chnames', 'correction', 'dismissed', 'mayavi', 'original']>\n",
+      "chnames (139,)\n",
+      "<KeysViewHDF5 ['dominance', 'implantation', 'nr', 'orde', 'other', 'outlier_chans', 'outlier_epochs', 'url']>\n",
+      "outlier_chans <HDF5 dataset \"strict_bads_names\": shape (24,), type \"|S13\">\n",
+      "<KeysViewHDF5 ['atlasses', 'chlocs', 'chnames', 'correction', 'dismissed', 'mayavi', 'original']>\n",
+      "chnames (127,)\n",
+      "<KeysViewHDF5 ['dominance', 'implantation', 'nr', 'orde', 'outlier_chans', 'outlier_epochs', 't-elec', 'url']>\n",
+      "outlier_chans <HDF5 dataset \"strict_bads_names\": shape (17,), type \"|S13\">\n",
+      "<KeysViewHDF5 ['atlasses', 'chlocs', 'chnames', 'dismissed', 'mayavi', 'original']>\n",
+      "chnames (187,)\n",
+      "<KeysViewHDF5 ['dominance', 'implantation', 'nr', 'orde', 'outlier_chans', 'outlier_epochs', 't-elec', 'url']>\n",
+      "outlier_chans <HDF5 dataset \"strict_bads_names\": shape (41,), type \"|S13\">\n",
+      "<KeysViewHDF5 ['atlasses', 'chlocs', 'chnames', 'correction', 'dismissed', 'mayavi', 'original']>\n",
+      "chnames (222,)\n",
+      "<KeysViewHDF5 ['implantation', 'nr', 'orde', 'other', 'outlier_chans', 'outlier_epochs', 't-elec', 'url']>\n",
+      "outlier_chans <HDF5 dataset \"strict_bads_names\": shape (55,), type \"|S11\">\n",
       "<KeysViewHDF5 ['atlasses', 'chlocs', 'chnames', 'dismissed', 'mayavi', 'original']>\n",
       "chnames (152,)\n",
       "<KeysViewHDF5 ['dominance', 'implantation', 'nr', 'orde', 'other', 'outlier_chans', 'outlier_epochs', 't-elec', 'url']>\n",
-      "outlier_chans <HDF5 dataset \"strict_bads_names\": shape (36,), type \"|S13\">\n"
+      "outlier_chans <HDF5 dataset \"strict_bads_names\": shape (36,), type \"|S13\">\n",
+      "<KeysViewHDF5 ['atlasses', 'chlocs', 'chnames', 'dismissed', 'mayavi', 'original']>\n",
+      "chnames (154,)\n",
+      "<KeysViewHDF5 ['dominance', 'implantation', 'nr', 'orde', 'other', 'outlier_chans', 'outlier_epochs', 't-elec', 'url']>\n",
+      "outlier_chans <HDF5 dataset \"strict_bads_names\": shape (16,), type \"|S11\">\n"
      ]
     }
    ],
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "b20a075a",
    "metadata": {},
    "outputs": [],
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "5884bf9a",
    "metadata": {},
    "outputs": [],
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "1900cd65",
    "metadata": {},
    "outputs": [],
